# cpptoolbox

./: .clang-format  .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/arena/: CMakeLists.txt  arena.hpp
src/geometry/: CMakeLists.txt  barycentric.cpp  barycentric.hpp  convex.hpp  geom_structs.cpp  geom_structs.hpp  geometry.cpp  geometry.hpp  math_utils.cpp  math_utils.hpp  matrix.hpp  plane.hpp  utils.hpp  vector.hpp
src/mallocator/: CMakeLists.txt  mallocator.hpp
src/shortalloc/: CMakeLists.txt  shortalloc.hpp
src/vector/: Vector.hpp
tests/: CMakeLists.txt  arena.t.cpp  convex.t.cpp  geometry.t.cpp  mallocator.t.cpp  matrix.t.cpp  plane.t.cpp  shortalloc.t.cpp  tools.t.cpp  utils.t.cpp  vector.t.cpp
